# project_bootcam

./: .env.example  .gitignore  pyproject.toml
correos_html/: 196bfa559e22159f.html  196c6dab2cbb5d7d.html
src/: interface.py  main.py
src/.streamlit/: config.toml
src/agents/cyber_agent/: run_agent.py
src/models/: gmail.py
src/tools/fishing_toolbox/: base.py  translator.py
src/tools/google_toolbox/: auth_calendar.py  auth_gmail.py  scopes.py  tools_calendar.py  tools_gmail.md  tools_gmail.py  tools_sheets.py  utils.py
